# elf

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: rust.yml
bevy_elf/: Cargo.toml  README.md
bevy_elf/src/: from_def_impls.rs  lib.rs  types.rs
bevy_elf_macros/: Cargo.toml
bevy_elf_macros/src/: lib.rs  spec.rs  test.rs
bevy_elf_macros/src/from_def/: def_generation.rs  from_def_conversion.rs  mod.rs
bevy_elf_macros/tests/: ui.rs
bevy_elf_macros/tests/ui/fail/: default_and_from_default.rs  default_and_from_default.stderr  default_and_with_resolver.rs  default_and_with_resolver.stderr  default_and_with_spec.rs  default_and_with_spec.stderr  default_not_satisfied.rs  default_not_satisfied.stderr  empty_field_attr.rs  empty_field_attr.stderr  empty_field_attr_with_parens.rs  empty_field_attr_with_parens.stderr  empty_type_attr.rs  empty_type_attr.stderr  empty_type_attr_with_parens.rs  empty_type_attr_with_parens.stderr  from_default_and_with_resolver.rs  from_default_and_with_resolver.stderr  from_default_and_with_spec.rs  from_default_and_with_spec.stderr  implicit_and_default.rs  implicit_and_default.stderr  implicit_and_from_default.rs  implicit_and_from_default.stderr  implicit_on_no_handle.rs  implicit_on_no_handle.stderr  invalid_def_type.rs  invalid_def_type.stderr  with_spec_and_with_resolver.rs  with_spec_and_with_resolver.stderr  with_spec_no_base_path.rs  with_spec_no_base_path.stderr
bevy_elf_macros/tests/ui/pass/: complex_struct.rs  simple_struct.rs
