[package]
name = "bevy_elf"
version = "0.0.1"
edition = "2024"
repository = "https://github.com/Koettlitz/elf"
license = "MIT OR Apache-2.0"
readme = "README.md"
description = "Serializable Bevy asset definitions that resolve string references into Handles"
keywords = ["bevy", "asset", "handles"]
categories = ["game-development"]

[features]
default = ["macros", "math", "app"]
app = ["dep:bevy_app"]
macros = ["dep:bevy_elf_macros"]
math = ["dep:bevy_math"]
image = ["dep:bevy_image"]

[dependencies]
bevy_elf_macros = { version = "0.0.1", optional = true, path = "../bevy_elf_macros"}
bevy_asset = "0.19"
bevy_app = { version = "0.19", optional = true }
bevy_reflect = "0.19"
bevy_math = { version = "0.19", optional = true, features = ["serialize"] }
bevy_image = { version = "0.19", optional = true, features = ["serialize"] }
serde = "1.0"
ron = "0.12"
thiserror = "2.0"

[dev-dependencies]
bevy_app = "0.19"
bevy_asset = "0.19"
bevy_image = "0.19"
