[package]
name = "bevy_elf_macros"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Koettlitz/elf"
description = "Derive macros for bevy_elf"

[lib]
proc-macro = true

[dependencies]
syn = { version = "3.0", features = [ "full", "extra-traits" ] }
quote = "1.0"
proc-macro2 = "1.0"
proc-macro-crate = "3"
convert_case = "0.11"

[dev-dependencies]
bevy_elf = { path = "../bevy_elf" }
bevy_asset = "0.19"
bevy_image = "0.19"
bevy_reflect = "0.19"
serde = "1.0"
prettyplease = "0.3"
trybuild = "1"
